# colorful-tags

./: .gitignore  CHANGELOG.md  CONTRIBUTORS  Makefile  README.md  addon.json  pyproject.toml  requirements.txt
docs/: description.md
src/: Hierarchical Tags 2.py
src/colorful_tags/: __init__.py  _version.py  compat.py  config.md  config.py  config.schema.json  data.py
src/colorful_tags/sidebar/: __init__.py  item.py  menu.py  model.py
src/colorful_tags/sidebar_legacy/: __init__.py  hierarchy.py
src/hierarchical_tags/: __init__.py  _version.py  browser.py  config.json  config.md  config.py  config.schema.json  consts.py  main.py  tagedit.py
tests/: conftest.py  test_hierarchical_tags.py
